Reduce header font size in ie to prevent wrapping
And bump version

--- a/css/theme.css
+++ b/css/theme.css
@@ -4,11 +4,11 @@
 
 #secondary{
 	position: relative;
-    padding-top: 75px;
 }
 
 #secondary aside {
     padding-left: 9px;
+    margin-top: 75px;
 }
 
 /* Header */
