--- a/style.css
+++ b/style.css
@@ -4,25 +4,7 @@
  * Author: Mark Skipper
  * Github Theme URI: https://github.com/bitterjug/Xenonium
  * URI: bitterjug.com
- * Version: 0.1.1 */ 
-
-@import url("../Xenon/style.css"); 
-/* =Theme customization starts here -------------------------------------------------------------- */
-/*
-Theme Name: Xenon
-Theme URL: http://www.fabthemes.com/xenon/
-Description: Free WordPress theme released by fabthemes.com
-Author: Fabthemes
-Author URI: www.fabthemes.com
-Version: 1.0.0
-
-Resetting and rebuilding styles have been helped along thanks to the fine work of
-Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
-along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
-and Blueprint http://www.blueprintcss.org/
-*/
-
-
+ * Version: 0.1.2 */ 
 /* =Reset
 -------------------------------------------------------------- */
 
@@ -506,4 +488,7 @@ object {
 	float: right;
 	text-align: right;
 	width: 50%;
+}
+#main {
+    margin-bottom: 20px;
 }
